k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fund-my-cause
  labels:
    name: fund-my-cause
