k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fund-my-cause-frontend
  namespace: fund-my-cause
  labels:
    app: fund-my-cause-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: fund-my-cause-frontend
